-- The name of the package.
name:                gantt

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Utility to generate a LaTeX pgfgantt chart from simple specification.

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              John Noll

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          john.noll@lero.ie

-- A copyright notice.
-- copyright:           

category:            Proposal preparation

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

executable gantt
  -- .hs or .lhs file containing the Main module.
  main-is:             gantt.hs
  
  -- Modules included in this executable, other than Main.
  other-modules:       Gantt
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends: 
                 base
                 , HStringTemplate
                 , cmdargs
                 , mtl
                 , parsec
                 , parsec-numbers
                 , time >= 1.5.0.0
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  